feat: complete Java 21 skill library