@@ -1,172 +1,43 @@
 ---
 name: virtual-threads
 description: >
-  Extends agent's knowledge of Java 21 virtual threads (JEP 444), structured
-  concurrency (JEP 453), and JavaFX async patterns. Use when writing concurrent
-  code, offloading I/O from the FX Application Thread, or debugging thread pinning.
-compatibility: Java 21+ required
+  Extends agent's knowledge of Java 21 virtual threads for scalable concurrent I/O.
+  Use when creating concurrent tasks, replacing thread pools for blocking I/O, or
+  avoiding thread pinning with synchronized blocks.
+compatibility: Java 21+
 metadata:
   domain: core-java
-  level: advanced
-  stack: [java-21, openjdk]
-  requires: [concurrency-fundamentals]
-  related: [async-ui-patterns, threading-and-platform-runlater]
-  version: "1.1.0"
+  level: intermediate
+  stack: [java-21]
+  version: "1.0.0"
 ---
 
-# Virtual Threads & Structured Concurrency
+# Virtual Threads
 
-Java 21 virtual threads are JVM-managed lightweight threads that enable
-high-throughput I/O-bound concurrency without platform thread overhead.
-This skill covers creation, lifecycle, structured concurrency, and integration
-with JavaFX.
+Virtual threads (JEP 444) are lightweight threads managed by the JVM, not the OS.
+Use them for I/O-bound work: HTTP calls, DB queries, file reads.
 
-## When This Skill Applies
+## Concepts
 
-- Writing `CompletableFuture` or async service methods that do I/O
-- Offloading database queries, HTTP calls, or file operations from the FX thread
-- Parallelizing independent queries (dashboard loading, report generation)
-- Diagnosing thread pinning or virtual thread performance issues
+- `Thread.ofVirtual().start(runnable)` — create and start a virtual thread
+- `Thread.startVirtualThread(runnable)` — shorthand
+- `StructuredTaskScope` (JEP 453) — structured concurrency withshutdown on failure/cancellation
+- Pinning — a virtual thread pins its carrier thread inside `synchronized`, blocking the carrier
+- `ReentrantLock` — drop-in replacement for `synchronized`; does NOT pin
 
-## Core Rules
+## Rules
 
-1. **Use virtual threads exclusively for I/O-bound work.** CPU-bound tasks gain nothing.
-2. **Create per-task — never pool.** Use `Executors.newVirtualThreadPerTaskExecutor()`, never `newFixedThreadPool()`.
-3. **Use `ReentrantLock`, not `synchronized`.** `synchronized` pins virtual threads to their carrier.
-4. **Use `StructuredTaskScope`** for parallel tasks with parent-child relationships.
-5. **Never block the FX Application Thread.** All I/O goes through virtual threads; results arrive via `Platform.runLater` or `thenAcceptAsync`.
-6. **Monitor pinning** with `-Djdk.tracePinnedThreads=short` in dev.
+1. Use virtual threads for I/O-bound tasks; keep `ThreadParallel` for CPU-bound.
+2. Replace `ExecutorService` fixed pools with `Executors.newVirtualThreadPerTaskExecutor()`.
+3. Never use `synchronized` on long-running or I/O sections in virtual threads — use `ReentrantLock`.
+4. Use `StructuredTaskScope` to fan-out concurrent subtasks with automatic cancellation.
+5. Virtual threads are short-lived; do NOT pool or cache them.
 
-## Examples
+## Anti-patterns
 
-### Creating a virtual-thread executor
+See [anti-patterns.md](./anti-patterns.md).
 
-```java
-// ✅ CORRECT — per-task executor, never pooled
-private final ExecutorService ioExecutor =
-    Executors.newVirtualThreadPerTaskExecutor();
+## Related
 
-public CompletableFuture<List<Product>> loadProductsAsync() {
-    return CompletableFuture.supplyAsync(
-        () -> productRepository.findAll(),
-        ioExecutor
-    );
-}
-```
-
-```java
-// ❌ WRONG — pooling defeats virtual threads
-ExecutorService pool = Executors.newFixedThreadPool(100);
-```
-
-**Why:** Virtual threads cost ~1KB vs ~1MB for platform threads. Pooling adds contention for no benefit.
-
-### Structured concurrency for parallel queries
-
-```java
-// ✅ CORRECT — parent-child lifecycle, clean cancellation
-public DashboardData loadDashboard() throws Exception {
-    try (var scope = new StructuredTaskScope.ShutdownOnFailure()) {
-        var products = scope.fork(() -> productRepository.findLowStock());
-        var sales    = scope.fork(() -> saleRepository.findToday());
-        var revenue  = scope.fork(() -> saleRepository.todayRevenue());
-
-        scope.join();
-        scope.throwIfFailed();
-
-        return new DashboardData(
-            products.resultNow(),
-            sales.resultNow(),
-            revenue.resultNow()
-        );
-    }
-}
-```
-
-### Integration with JavaFX
-
-```java
-// Service layer — runs on virtual thread
-public CompletableFuture<List<Product>> searchAsync(String query) {
-    return CompletableFuture.supplyAsync(() ->
-        DB.find(Product.class)
-          .where().ilike("name", "%" + query + "%")
-          .findList(),
-        ioExecutor
-    );
-}
-
-// Controller — never block FX thread
-@FXML
-private void onSearch() {
-    inventoryService.searchAsync(searchField.getText())
-        .thenAcceptAsync(products ->
-            productTable.setItems(FXCollections.observableArrayList(products)),
-            Platform::runLater
-        )
-        .exceptionally(ex -> {
-            Platform.runLater(() -> showError(ex.getMessage()));
-            return null;
-        });
-}
-```
-
-### Locking — avoiding pinning
-
-```java
-// ❌ WRONG — synchronized pins the virtual thread
-public synchronized List<Product> findAll() {
-    return repository.findAll();
-}
-
-// ✅ CORRECT — ReentrantLock doesn't pin
-private final ReentrantLock lock = new ReentrantLock();
-
-public List<Product> findAll() {
-    lock.lock();
-    try {
-        return repository.findAll();
-    } finally {
-        lock.unlock();
-    }
-}
-```
-
-## Conventions
-
-| Aspect | Convention |
-|--------|-----------|
-| Executor naming | `taskExecutor` or `ioExecutor` — never `threadPool` |
-| Structured scope | Always `try-with-resources` |
-| Cancellation | `scope.shutdown()` — never `Thread.interrupt()` |
-
-## Anti-Patterns
-
-- **Pooling virtual threads** — defeats the JVM's lightweight scheduling
-- **`synchronized` in VT paths** — causes carrier thread pinning
-- **VTs for CPU-bound work** — no benefit; use `ForkJoinPool` instead
-- **`Thread.sleep()` in structured scope** — blocks the carrier
-
-## Verification
-
-### Implementation
-- [ ] All I/O offloading uses `newVirtualThreadPerTaskExecutor()`
-- [ ] `ReentrantLock` used instead of `synchronized` in VT paths
-- [ ] `StructuredTaskScope` used for parallel task groups
-- [ ] No virtual thread pools
-
-### Code Review
-- [ ] No `synchronized` in methods called from virtual threads
-- [ ] No `ThreadLocal` abuse in VT code
-- [ ] Exception handling preserves structured scope cancellation
-
-## Reference Material
-
-- `references/virtual-threads.md` — full JEP 444/453 reference, pinning deep-dive
-- `scripts/detect-pinning.sh` — JVM flag helper for dev environments
-
-## Recommended Reading
-
-- [JEP 444: Virtual Threads](https://openjdk.org/jeps/444)
-- [JEP 453: Structured Concurrency](https://openjdk.org/jeps/453)
-- [Oracle Virtual Threads Guide](https://docs.oracle.com/en/java/javase/21/core/virtual-threads.html)
+- concurrency-fundamentals — ExecutorService, CompletableFuture, ReentrantLock
+- exception-strategy — domain exceptions, logging
